summative.moria.Moria.scala.error
Compilation error:
Moria:27: error: not found: value Direction
  if (getDirection() == Direction.EAST) {
                        ^Moria:41: error: not found: value Direction
  } else if (getDirection() == Direction.SOUTH) {
                               ^Moria:48: error: not found: value Direction
  } else if (getDirection() == Direction.WEST) {
                               ^